--- a/package.json
+++ b/package.json
@@ -17,8 +17,12 @@
     "babel-preset-latest": "^6.0.0",
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
+    "extract-text-webpack-plugin": "^2.1.0",
     "file-loader": "^0.9.0",
+    "node-sass": "^4.5.2",
+    "sass-loader": "^6.0.3",
     "vue-loader": "^11.1.4",
+    "vue-router": "^2.4.0",
     "vue-template-compiler": "^2.2.1",
     "webpack": "^2.2.0",
     "webpack-dev-server": "^2.2.0"
